# Downloader

./: .gitignore  LICENSE  README.md  auto_venv_setup.py  build_deb.sh  config_generator.py  install.sh  pyproject.toml  requirements.txt  rs_toolkit.py  setup.py  uninstall.sh
.github/workflows/: ci.yml  release.yml
agents/: __init__.py
agents/ai/: __init__.py
agents/amazon_music/: __init__.py
agents/analytics/: __init__.py
agents/apple_music/: __init__.py
agents/archive_org/: __init__.py
agents/artstation/: __init__.py
agents/audible/: __init__.py
agents/bandcamp/: __init__.py
agents/batch/: __init__.py
agents/bilibili/: __init__.py
agents/bitchute/: __init__.py
agents/cloud/: __init__.py
agents/convert/: __init__.py
agents/coursera/: __init__.py
agents/dailymotion/: __init__.py
agents/deezer/: __init__.py
agents/deviantart/: __init__.py
agents/discord/: __init__.py
agents/douyin/: __init__.py
agents/dropbox/: __init__.py
agents/ebook/: __init__.py
agents/facebook/: __init__.py
agents/flickr/: __init__.py
agents/giphy/: __init__.py
agents/google_drive/: __init__.py
agents/gutenberg/: __init__.py
agents/imgur/: __init__.py
agents/instagram/: __init__.py
agents/ipfs/: __init__.py
agents/kakao/: __init__.py
agents/kick/: __init__.py
agents/librivox/: __init__.py
agents/likee/: __init__.py
agents/live/: __init__.py
agents/loom/: __init__.py
agents/mega/: __init__.py
agents/metadata/: __init__.py
agents/mixcloud/: __init__.py
agents/naver/: __init__.py
agents/niconico/: __init__.py
agents/odysee/: __init__.py
agents/ok/: __init__.py
agents/onedrive/: __init__.py
agents/onlyfans/: __init__.py
agents/patreon/: __init__.py
agents/periscope/: __init__.py
agents/pexels/: __init__.py
agents/pinterest/: __init__.py
agents/playlist/: __init__.py
agents/podcast/: __init__.py
agents/proxy/: __init__.py
agents/reddit/: __init__.py
agents/reverbnation/: __init__.py
agents/rumble/: __init__.py
agents/s3/: __init__.py
agents/scheduler/: __init__.py
agents/search/: __init__.py
agents/skillshare/: __init__.py
agents/snapchat/: __init__.py
agents/soundclick/: __init__.py
agents/soundcloud/: __init__.py
agents/spotify/: __init__.py
agents/stage/: __init__.py
agents/stream/: __init__.py
agents/subtitle/: __init__.py
agents/ted/: __init__.py
agents/telegram/: __init__.py
agents/tenor/: __init__.py
agents/thumbnail/: __init__.py
agents/tidal/: __init__.py
agents/tiktok/: __init__.py
agents/tor/: __init__.py
agents/torrent/: __init__.py
agents/tumblr/: __init__.py
agents/twitch/: __init__.py
agents/twitter/: __init__.py
agents/udemy/: __init__.py
agents/unsplash/: __init__.py
agents/vimeo/: __init__.py
agents/vimeo_enterprise/: __init__.py
agents/vk/: __init__.py
agents/webdav/: __init__.py
agents/weibo/: __init__.py
agents/whatsapp/: __init__.py
agents/wistia/: __init__.py
agents/youtube/: __init__.py
agents/youtube_music/: __init__.py
config/profiles/: default.json  production.json
core/: __init__.py  config.py  database.py  downloader_base.py  logger.py  network.py
debian/: control  postinst  postrm  prerm
utils/: __init__.py  banner.py  colors.py  helpers.py  progress.py  validator.py
